--- a/lecture_07/index.html
+++ b/lecture_07/index.html
@@ -29,12 +29,11 @@
     }
     .grid {
       display: grid;
-      /* grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); */
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
       margin: 10px auto 0 auto; 
-      padding: 10px;
+      /* padding: 10px; */
       gap : 15px;
-      background: #18181818
+      background: #181818
     }
     .card {
       background: #222;
@@ -59,20 +58,24 @@
       width: 100%;
       height: 200px;
       border-radius: 4px;
-      aspect-ratio: 8/11;
-      object-fit: cover;
+      aspect-ratio: 2/3;
+      object-fit:fill;
     }
     .hidden { display: none; }
     .detail {
       margin-top: 20px;
-      padding: 15px;
+      /* padding: 5px; */
       background: #222;
       border-radius: 4px;
-      justify-content: center;
-      align-items: baseline;
+      justify-content: flex-start;
+      align-items: center;
+      display: grid; 
+      grid-template-columns:1fr 3fr ;
+      gap: 10px;
     }
     .detail img {
-      width: 100px;
+      padding: 10px;
+      width: 200px;
       margin-right: 15px;
       border-radius: 4px;
     }
@@ -141,8 +144,8 @@ async function showDetail(id) {
     const movie = await res.json();         //if we dont use await this would be in an unresolved state so won't be able to fetch the data
     const poster = movie.Poster !== 'N/A' ? movie.Poster:'';
 
-    document.getElementById('detail').innerHTML=`<img src="${poster}"/>
-
+    document.getElementById('detail').innerHTML=`<div class="first"><img src="${poster}"/></div>
+    <div class="second">
     <h2> ${movie.Title}</h2>
     <p><strong> Year: </strong> ${movie.Year}</p>
     <p> <strong> Genre: </strong> ${movie.Genre}</p>
@@ -150,7 +153,7 @@ async function showDetail(id) {
     <p><strong> Language: </strong>${movie.Language}</p>
     <p><strong>Plot: </strong>${movie.Plot}</p>
     <p><strong>IMDB Rating: </strong>${movie.imdbRating}</p>
-    <p><strong>IMDB Votes: </strong>${movie.imdbVotes}</p>    
+    <p><strong>IMDB Votes: </strong>${movie.imdbVotes}</p></div>    
     `;
     //director plot imdbid; done
 
