--- a/lecture_07/blogs.html
+++ b/lecture_07/blogs.html
@@ -11,26 +11,19 @@
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
         }
-        .start {
-            margin-top: 50px;
-        }
-        .results { 
-            margin:10px auto;
-        }
+        
 
-        button {
-            background: #e30510;
-            cursor: pointer;
-            border-radius: 5px;
+        input, button {
+            padding: 8px;
+            margin: 8px;
+            border: 1px solid #444;
+            border-radius: 4px;
+            background-color: #222;
             color: white;
-            padding: 10px;
-
         }
-        input {
-            border-radius: 5px;
-            padding: 10px;
-            margin: 10px;
-
+        button {
+            background: red;
+            cursor: pointer;
         }
         .grid {
             display: grid;
@@ -59,7 +52,20 @@
         .card:hover {
             background:#444343
         }
-        .hidden {display:none}
+
+        .card h3 {
+            font-size: 16px;
+            margin: 10px 0 5px 0;
+            color : rgb(245, 7, 7);
+        }
+
+        .card p {
+            font-size: 14px;
+            color: white;
+            margin: 5px 0;
+            
+        }
+        .hidden {display:none;}
         .detail {
             margin-top:20px;
             background: #222;
@@ -67,10 +73,27 @@
             justify-content: flex-start;
             align-items: center;
             display:grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 3fr;
             gap: 10px;
         }
+        .detail .first {
+            padding: 10px;
+        }
 
+        .detail .second {
+            padding: 10px;
+        }
+
+        .detail h2 {
+            margin-top : 0;
+            color : red;
+        }
+
+        .loading {
+            text-align: center;
+            color: #ccc;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
@@ -79,10 +102,12 @@
         <h1>Blogs App</h1>
     </div>
 
-    <button onclick="loadAllBlogs()">load All blogs</button>
+    <button onclick="loadAllBlogs()">Show All</button>
+
+
     <div class="loading hidden" id="loading">Loading Blogs...</div>
     <div id="results" class="grid"></div>
-    <div id="detail" class="details hidden"></div>
+    <div id="detail" class="detail hidden"></div>
 </body>
 
 <script>
