--- a/lecture_06/index.html
+++ b/lecture_06/index.html
@@ -166,7 +166,7 @@
                     })">Delete</button>
                     </li>
                 `
-        );
+        ).join("");
       }
       //Event listeners in JavaScript are used to detect and respond to events that occur in the browser or on a specific element. Events can be user interactions like clicks, mouse movements, keyboard presses, or system events like page loads or form submissions.
       document.getElementById("todoInput").addEventListener("keypress", (e) => {
