--- a/lecture_15/github Analytics App/index.html
+++ b/lecture_15/github Analytics App/index.html
@@ -15,38 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <style>
-      body {
-        background: linear-gradient(135deg, rgb(31, 26, 34), rgb(28, 28, 73));
-      }
-
-      .container-1 {
-        background: fixed;
-      }
-
-      #result {
-        /* visibility:hidden; */
-        padding: 10px;
-        margin-top: 20px;
-        background: linear-gradient(
-          149deg,
-          rgba(66, 11, 88, 0.753),
-          rgba(8, 8, 88, 0.753)
-        );
-        color: white;
-      }
-
-      table {
-        padding: 10px;
-        margin-top: 20px;
-        background: linear-gradient(
-          149deg,
-          rgba(66, 11, 88, 0.753),
-          rgba(8, 8, 88, 0.753)
-        );
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <main>
@@ -88,6 +57,6 @@
       </div>
     </section>
     <script src="githubapp2.js"></script>
-    div.
+    
   </body>
 </html>
